--- a/config/param.yaml
+++ b/config/param.yaml
@@ -1,6 +1,6 @@
 wrench_calculator:
-  max_wrench: 0.1
-  max_torque_wrench: 0.1
-  min_torque_wrench: -0.1
-  max_linear_speed: 0.2
-  tolerance: 5.0 
+  max_wrench: 0.42
+  max_torque_wrench: 0.25
+  min_torque_wrench: -0.25
+  max_linear_speed: 5 #NOT BEING USED
+  tolerance: 3.0 
